--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
 </head>
 
 <body>
-    
+    <header>
+        <img class="header-logo" src="/assets/images/logo.svg" alt="header-logo">
+        
+        <ul class="nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Popular</a></li>
+            <li><a href="#">Trending</a></li>
+            <li><a href="#">Categories</a></li>
+        </ul>
+    </header>
 </body>
 
 </html>
