--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
    <!--  CDN END-->
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="styles.css">
    <title>S.S.S Hotels - Home</title>
 </head>
 
