--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous" referrerpolicy="no-referrer" />
    <!--  CDN END-->
    <link rel="stylesheet" href="styles.css">
-   <title>S.S.S Hotels - Home</title>
+   <title>S.S.S Tech News</title>
 </head>
 
 <body>
