--- a/index.html
+++ b/index.html
@@ -26,6 +26,79 @@
             <li><a href="#">Categories</a></li>
         </ul>
     </header>
+
+    <main>
+    <!-- GRID 3 COLUMNS! -->
+    
+    <!-- story -->
+        <div class="story">
+            <!-- image banner -->
+            <img src="/assets/images/image-web-3-desktop.jpg">
+            <!-- image end -->
+            <div class="story-caption">
+                <h1>The Bright Future of S.S.S?</h1>
+                <div class="read-card">
+                    <p>We dive into the next evolution of S.S.S that put power into humanity thanks to the well guidance of Chief Executive Wadie B, Amazing World indeed.</p>
+                    <a href="#">READ MORE</a>
+                </div>
+            </div>
+
+        </div>
+    <!-- story end -->
+    
+    <!-- aside -->
+        <div class="aside">
+            <h2>New</h2>
+
+            <div class="new">
+                <h3>Trump gets back to Twitter</h3>
+                <p>Elon Musk cooperation with S.S.S brought the President back.</p>
+            </div>
+
+            <div class="new">
+                <h3>Trump gets back to Twitter</h3>
+                <p>Elon Musk cooperation with S.S.S brought the President back.</p>
+            </div>
+
+            <div class="new">
+                <h3>Trump gets back to Twitter</h3>
+                <p>Elon Musk cooperation with S.S.S brought the President back.</p>
+            </div>
+        </div>
+    <!-- aside end-->
+
+    <!-- topics -->
+    <div class="topics">
+        <!-- topics in grid taking whole line -->
+        <div class="topic-card">
+            <img class="topic-img" src="/assets/images/image-retro-pcs.jpg" alt="">
+            <div class="topic-wrapper">
+                <h3>01</h3>
+                <p>Reviving Piracy</p>
+                <p>Reddit has successfully brought Piracy back to its golden times</p>
+            </div>
+        </div>
+
+        <div class="topic-card">
+            <img class="topic-img" src="/assets/images/image-retro-pcs.jpg" alt="">
+            <div class="topic-wrapper">
+                <h3>01</h3>
+                <p>Reviving Piracy</p>
+                <p>Reddit has successfully brought Piracy back to its golden times</p>
+            </div>
+        </div>
+
+        <div class="topic-card">
+            <img class="topic-img" src="/assets/images/image-retro-pcs.jpg" alt="">
+            <div class="topic-wrapper">
+                <h3>01</h3>
+                <p>Reviving Piracy</p>
+                <p>Reddit has successfully brought Piracy back to its golden times</p>
+            </div>
+        </div>
+    </div>
+    <!-- topics end -->
+    </main>
 </body>
 
 </html>
