--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     <!-- story -->
         <div class="story">
             <!-- image banner -->
-            <img src="/assets/images/image-web-3-desktop.jpg">
+            <img class="banner" src="/assets/images/image-web-3-desktop.jpg">
             <!-- image end -->
             <div class="story-caption">
+                <!-- flexbox col -->
                 <h1>The Bright Future of S.S.S?</h1>
                 <div class="read-card">
                     <p>We dive into the next evolution of S.S.S that put power into humanity thanks to the well guidance of Chief Executive Wadie B, Amazing World indeed.</p>
