--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img class="banner" src="/assets/images/image-web-3-desktop.jpg">
             <!-- image end -->
             <div class="story-caption">
-                <!-- flexbox col -->
+                <!-- flexbox row -->
                 <h1>The Bright Future of S.S.S?</h1>
                 <div class="read-card">
                     <p>We dive into the next evolution of S.S.S that put power into humanity thanks to the well guidance of Chief Executive Wadie B, Amazing World indeed.</p>
