--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             <!-- image end -->
             <div class="story-caption">
                 <!-- flexbox row -->
-                <h1>The Bright Future of S.S.S?</h1>
+                <div class="title">
+                    <h1>The Bright Future of S.S.S?</h1>
+                </div>
+                
                 <div class="read-card">
                     <p>We dive into the next evolution of S.S.S that put power into humanity thanks to the well guidance of Chief Executive Wadie B, Amazing World indeed.</p>
                     <a href="#">READ MORE</a>
