--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             </div>
             <hr>
             <div class="new">
-                <h3>Trump gets back to Twitter</h3>
-                <p>Elon Musk cooperation with S.S.S brought the President back.</p>
+                <h3>No Copyright Twitter</h3>
+                <p>Apparently Twitter stopped sending copyrights infrigments on its platform.</p>
             </div>
             <hr>
             <div class="new">
-                <h3>Trump gets back to Twitter</h3>
-                <p>Elon Musk cooperation with S.S.S brought the President back.</p>
+                <h3>World Cup Qatar</h3>
+                <p>21st November is the day, fans are so excited, wacth coverage on Twitter.</p>
             </div>
         </div>
     <!-- aside end-->
@@ -87,8 +87,8 @@
             <img class="topic-img" src="/assets/images/image-top-laptops.jpg" alt="">
             <div class="topic-wrapper">
                 <h3>01</h3>
-                <p>Reviving Piracy</p>
-                <p>Reddit has successfully brought Piracy back to its golden times</p>
+                <p>Z-lib closed</p>
+                <p>Google, Amazon and FBi cooperated to take down Z-Library</p>
             </div>
         </div>
 
@@ -96,8 +96,8 @@
             <img class="topic-img" src="/assets/images/image-gaming-growth.jpg" alt="">
             <div class="topic-wrapper">
                 <h3>01</h3>
-                <p>Reviving Piracy</p>
-                <p>Reddit has successfully brought Piracy back to its golden times</p>
+                <p>BlackFriday PS4</p>
+                <p>God of War, Skyrim and many games can be bought for cheap</p>
             </div>
         </div>
     </div>
